--- a/views/index.gohtml
+++ b/views/index.gohtml
@@ -4,70 +4,137 @@
     <meta charset="UTF-8">
     <title>Meal Planning</title>
     {{ range .Manifest.CssFiles }}
-    <link blocking="render" rel="stylesheet" type="text/css" href="{{ . }}">
+        <link blocking="render" rel="stylesheet" type="text/css" href="{{ . }}">
     {{ end }}
     {{ range .Manifest.JsFiles }}
-    <script defer src="{{ . }}"></script>
+        <script defer src="{{ . }}"></script>
     {{ end }}
 </head>
 <body class="bg-slate-50">
-    <h1 class="font-semibold text-4xl text-center my-8">Meal Planning</h1>
-    <div class="grid grid-cols-[auto_1fr_1fr_1fr_1fr_auto] gap-3 mx-8">
-        <div class="grid grid-cols-subgrid col-start-2 col-span-4">
-            <div class="font-light text-slate-700 text-lg">Breakfast</div>
-            <div class="font-light text-slate-700 text-lg">Lunch</div>
-            <div class="font-light text-slate-700 text-lg">Dinner</div>
-            <div class="font-light text-slate-700 text-lg">Snacks</div>
-        </div>
-        {{ template "meal-list" .Meals }}
+<h1 class="font-semibold text-4xl text-center my-8">Meal Planning</h1>
+<div class="grid grid-cols-[auto_1fr_1fr_1fr_1fr_auto] gap-3 mx-8">
+    <div class="grid grid-cols-subgrid col-start-2 col-span-4">
+        <div class="font-light text-slate-700 text-lg">Breakfast</div>
+        <div class="font-light text-slate-700 text-lg">Lunch</div>
+        <div class="font-light text-slate-700 text-lg">Dinner</div>
+        <div class="font-light text-slate-700 text-lg">Snacks</div>
     </div>
+    {{ template "meal-list" .Meals }}
+</div>
 </body>
 </html>
 
 {{ define "meal-list" }}
     {{ range . }}
-        <div id="meals-{{ .Date.Format "2006-01-02" }}" class="grid grid-cols-subgrid items-center col-span-6 bg-white p-3 rounded-xl">{{ template "meal-day" . }}</div>
+        {{ template "meal-day" . }}
     {{ end }}
 {{ end }}
 
 {{ define "meal-day" }}
-    <div class="font-light text-slate-700 text-lg">
-        {{ .Date.Format "Mon 2.1." }}
+    <div id="meals-{{ .Date.Format "2006-01-02" }}"
+         class="grid grid-cols-subgrid items-center col-span-6 bg-white p-3 rounded-xl">
+        <div class="font-light text-slate-700 text-lg">
+            {{ .Date.Format "Mon 2.1." }}
+        </div>
+        {{ if .Breakfast }}
+            <div class="font-medium text-xl">
+                {{ .Breakfast }}
+            </div>
+        {{ else }}
+            {{ template "nothing-planned" }}
+        {{ end }}
+        {{ if .Lunch }}
+            <div class="font-medium text-xl">
+                {{ .Lunch }}
+            </div>
+        {{ else }}
+            {{ template "nothing-planned" }}
+        {{ end }}
+        {{ if .Dinner }}
+            <div class="font-medium text-xl">
+                {{ .Dinner }}
+            </div>
+        {{ else }}
+            {{ template "nothing-planned" }}
+        {{ end }}
+        {{ if .Snacks }}
+            <div class="font-medium text-xl">
+                {{ .Snacks }}
+            </div>
+        {{ else }}
+            {{ template "nothing-planned" }}
+        {{ end }}
+        <button
+                hx-get="/meals/{{ .Date.Format "2006-01-02" }}/form"
+                hx-target="#meals-{{ .Date.Format "2006-01-02" }}"
+                hx-swap="outerHTML"
+                class="update-plan-button bg-amber-200 text-amber-950 px-3 py-1 border border-amber-400 rounded-lg -my-1 transition-colors hover:bg-amber-300 hover:border-amber-500">
+            Edit
+        </button>
     </div>
-    {{ if .Breakfast }}
-        <div class="font-medium text-xl">
-            {{ .Breakfast }}
-        </div>
-    {{ else }}
-        {{ template "nothing-planned" }}
-    {{ end }}
-    {{ if .Lunch }}
-        <div class="font-medium text-xl">
-            {{ .Lunch }}
-        </div>
-    {{ else }}
-        {{ template "nothing-planned" }}
-    {{ end }}
-    {{ if .Dinner }}
-        <div class="font-medium text-xl">
-            {{ .Dinner }}
-        </div>
-    {{ else }}
-        {{ template "nothing-planned" }}
-    {{ end }}
-    {{ if .Snacks }}
-        <div class="font-medium text-xl">
-            {{ .Snacks }}
-        </div>
-    {{ else }}
-        {{ template "nothing-planned" }}
-    {{ end }}
-    <button
-            hx-get="/meals/form/{{ .Date.Format "2006-01-02" }}"
-            hx-target="#meals-{{ .Date.Format "2006-01-02" }}"
-            class="update-plan-button bg-amber-200 text-amber-950 px-3 py-1 border border-amber-400 rounded-lg -my-1 transition-colors hover:bg-amber-300 hover:border-amber-500">
-        Edit
-    </button>
 {{ end }}
 
-{{ define "nothing-planned" }}<div class="font-light text-slate-700 text-base">Nothing planned</div>{{ end }}
+{{ define "meal-day-form" }}
+    <form id="meals-{{ .Date.Format "2006-01-02" }}"
+          class="grid grid-cols-subgrid items-center col-span-6 bg-white p-3 rounded-xl">
+        <div class="font-light text-slate-700 text-lg">
+            {{ .Date.Format "Mon 2.1." }}
+        </div>
+        <div>
+            <label class="sr-only" for="breakfast-{{ .Date.Format "2006-01-02" }}">Breakfast</label>
+            <input
+                    id="breakfast-{{ .Date.Format "2006-01-02" }}"
+                    class="w-full font-medium text-xl px-3 py-0.5 border border-slate-200 rounded-md -my-1"
+                    type="text"
+                    value="{{ .Breakfast }}"
+                    placeholder="Nothing planned"
+            >
+        </div>
+        <div>
+            <label class="sr-only" for="lunch-{{ .Date.Format "2006-01-02" }}">Lunch</label>
+            <input
+                    id="lunch-{{ .Date.Format "2006-01-02" }}"
+                    class="w-full font-medium text-xl px-3 py-0.5 border border-slate-200 rounded-md -my-1"
+                    type="text"
+                    value="{{ .Lunch }}"
+                    placeholder="Nothing planned"
+            >
+        </div>
+        <div>
+            <label class="sr-only" for="dinner-{{ .Date.Format "2006-01-02" }}">Dinner</label>
+            <input
+                    id="dinner-{{ .Date.Format "2006-01-02" }}"
+                    class="w-full font-medium text-xl px-3 py-0.5 border border-slate-200 rounded-md -my-1"
+                    type="text"
+                    value="{{ .Dinner }}"
+                    placeholder="Nothing planned"
+            >
+        </div>
+        {{ if .Snacks }}
+            <div class="font-medium text-xl">
+                {{ .Snacks }}
+            </div>
+        {{ else }}
+            {{ template "nothing-planned" }}
+        {{ end }}
+        <div>
+            <button
+                    hx-put="/meals/{{ .Date.Format "2006-01-02" }}"
+                    hx-target="#meals-{{ .Date.Format "2006-01-02" }}"
+                    hx-swap="outerHTML"
+                    class="px-3 py-1 border border-slate-400 rounded-lg -my-1 transition-colors hover:bg-slate-200 hover:border-slate-500">
+                Cancel
+            </button>
+            <button
+                    hx-put="/meals/{{ .Date.Format "2006-01-02" }}"
+                    hx-target="#meals-{{ .Date.Format "2006-01-02" }}"
+                    hx-swap="outerHTML"
+                    class="bg-amber-200 text-amber-950 px-3 py-1 border border-amber-400 rounded-lg -my-1 transition-colors hover:bg-amber-300 hover:border-amber-500">
+                Save
+            </button>
+        </div>
+    </form>
+{{ end }}
+
+{{ define "nothing-planned" }}
+    <div class="font-light text-slate-700 text-base">Nothing planned</div>{{ end }}
