--- a/views/index.gohtml
+++ b/views/index.gohtml
@@ -86,6 +86,7 @@
                     id="breakfast-{{ .Date.Format "2006-01-02" }}"
                     class="w-full font-medium text-xl px-3 py-0.5 border border-slate-200 rounded-md -my-1"
                     type="text"
+                    name="breakfast"
                     value="{{ .Breakfast }}"
                     placeholder="Nothing planned"
             >
@@ -96,6 +97,7 @@
                     id="lunch-{{ .Date.Format "2006-01-02" }}"
                     class="w-full font-medium text-xl px-3 py-0.5 border border-slate-200 rounded-md -my-1"
                     type="text"
+                    name="lunch"
                     value="{{ .Lunch }}"
                     placeholder="Nothing planned"
             >
@@ -106,6 +108,7 @@
                     id="dinner-{{ .Date.Format "2006-01-02" }}"
                     class="w-full font-medium text-xl px-3 py-0.5 border border-slate-200 rounded-md -my-1"
                     type="text"
+                    name="dinner"
                     value="{{ .Dinner }}"
                     placeholder="Nothing planned"
             >
