--- a/views/index.gohtml
+++ b/views/index.gohtml
@@ -122,7 +122,7 @@
         {{ end }}
         <div>
             <button
-                    hx-put="/meals/{{ .Date.Format "2006-01-02" }}"
+                    hx-get="/meals/{{ .Date.Format "2006-01-02" }}"
                     hx-target="#meals-{{ .Date.Format "2006-01-02" }}"
                     hx-swap="outerHTML"
                     class="px-3 py-1 border border-slate-200 rounded-lg -my-1 transition-colors hover:bg-slate-100 hover:border-slate-300">
