--- a/views/index.gohtml
+++ b/views/index.gohtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Meal Planning</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     {{ range .Manifest.CssFiles }}
         <link blocking="render" rel="stylesheet" type="text/css" href="{{ . }}">
     {{ end }}
@@ -12,8 +13,8 @@
 </head>
 <body class="bg-slate-50">
 <h1 class="font-semibold text-4xl text-center my-8">Meal Planning</h1>
-<div class="grid grid-cols-[auto_1fr_1fr_1fr_1fr_auto] gap-3 mx-8">
-    <div class="grid grid-cols-subgrid col-start-2 col-span-4">
+<div class="grid grid-cols-1 sm:grid-cols-[auto_1fr_1fr_1fr_1fr_auto] gap-3 mx-4 sm:mx-8">
+    <div class="hidden sm:grid sm:grid-cols-subgrid sm:col-start-2 sm:col-span-4">
         <div class="font-light text-slate-700 text-lg">Breakfast</div>
         <div class="font-light text-slate-700 text-lg">Lunch</div>
         <div class="font-light text-slate-700 text-lg">Dinner</div>
@@ -32,9 +33,12 @@
 
 {{ define "meal-day" }}
     <div id="meals-{{ .Date.Format "2006-01-02" }}"
-         class="grid grid-cols-subgrid items-center col-span-6 bg-white p-3 rounded-xl">
+         class="flex flex-col sm:grid sm:grid-cols-subgrid sm:items-center sm:col-span-6 bg-white p-3 rounded-xl">
         <div class="font-light text-slate-700 text-lg">
             {{ .Date.Format "Mon 2.1." }}
+        </div>
+        <div class="font-light text-lg sm:hidden mt-4">
+            Breakfast
         </div>
         {{ if .Breakfast }}
             <div class="font-medium text-xl">
@@ -43,6 +47,9 @@
         {{ else }}
             {{ template "nothing-planned" }}
         {{ end }}
+        <div class="font-light text-lg sm:hidden mt-4">
+            Lunch
+        </div>
         {{ if .Lunch }}
             <div class="font-medium text-xl">
                 {{ .Lunch }}
@@ -50,6 +57,9 @@
         {{ else }}
             {{ template "nothing-planned" }}
         {{ end }}
+        <div class="font-light text-lg sm:hidden mt-4">
+            Dinner
+        </div>
         {{ if .Dinner }}
             <div class="font-medium text-xl">
                 {{ .Dinner }}
@@ -57,6 +67,9 @@
         {{ else }}
             {{ template "nothing-planned" }}
         {{ end }}
+        <div class="font-light text-lg sm:hidden mt-4">
+            Snacks
+        </div>
         {{ if .Snacks }}
             <div class="font-medium text-xl">
                 {{ .Snacks }}
@@ -64,24 +77,27 @@
         {{ else }}
             {{ template "nothing-planned" }}
         {{ end }}
-        <button
-                hx-get="/meals/{{ .Date.Format "2006-01-02" }}/form"
-                hx-target="#meals-{{ .Date.Format "2006-01-02" }}"
-                hx-swap="outerHTML"
-                class="bg-amber-200 text-amber-950 px-3 py-1 border border-amber-300 rounded-lg -my-1 transition-colors hover:bg-amber-300 hover:border-amber-400">
-            Edit
-        </button>
+        <div class="flex justify-end">
+            <button
+                    hx-get="/meals/{{ .Date.Format "2006-01-02" }}/form"
+                    hx-target="#meals-{{ .Date.Format "2006-01-02" }}"
+                    hx-swap="outerHTML"
+                    class="bg-amber-200 text-amber-950 px-3 py-1 border border-amber-300 rounded-lg -my-1 transition-colors hover:bg-amber-300 hover:border-amber-400 mt-4 sm:-mt-1">
+                Edit
+            </button>
+        </div>
     </div>
 {{ end }}
 
 {{ define "meal-day-form" }}
     <form id="meals-{{ .Date.Format "2006-01-02" }}"
-          class="grid grid-cols-subgrid items-center col-span-6 bg-white p-3 rounded-xl">
+          class="sm:grid sm:grid-cols-subgrid items-center sm:col-span-6 bg-white p-3 rounded-xl">
         <div class="font-light text-slate-700 text-lg">
             {{ .Date.Format "Mon 2.1." }}
         </div>
-        <div>
-            <label class="sr-only" for="breakfast-{{ .Date.Format "2006-01-02" }}">Breakfast</label>
+        <div class="mt-3.5 sm:mt-0">
+            <label class="font-light text-lg sm:sr-only"
+                   for="breakfast-{{ .Date.Format "2006-01-02" }}">Breakfast</label>
             <input
                     id="breakfast-{{ .Date.Format "2006-01-02" }}"
                     class="w-full font-medium text-xl px-3 py-0.5 border border-slate-200 rounded-md -my-1"
@@ -91,8 +107,8 @@
                     placeholder="Nothing planned"
             >
         </div>
-        <div>
-            <label class="sr-only" for="lunch-{{ .Date.Format "2006-01-02" }}">Lunch</label>
+        <div class="mt-3.5 sm:mt-0">
+            <label class="font-light text-lg sm:sr-only" for="lunch-{{ .Date.Format "2006-01-02" }}">Lunch</label>
             <input
                     id="lunch-{{ .Date.Format "2006-01-02" }}"
                     class="w-full font-medium text-xl px-3 py-0.5 border border-slate-200 rounded-md -my-1"
@@ -102,8 +118,9 @@
                     placeholder="Nothing planned"
             >
         </div>
-        <div>
-            <label class="sr-only" for="dinner-{{ .Date.Format "2006-01-02" }}">Dinner</label>
+        <div class="mt-3.5 sm:mt-0">
+            <label class="font-light text-lg sm:sr-only"
+                   for="dinner-{{ .Date.Format "2006-01-02" }}">Dinner</label>
             <input
                     id="dinner-{{ .Date.Format "2006-01-02" }}"
                     class="w-full font-medium text-xl px-3 py-0.5 border border-slate-200 rounded-md -my-1"
@@ -113,6 +130,9 @@
                     placeholder="Nothing planned"
             >
         </div>
+        <div class="font-light text-lg sm:hidden mt-4">
+            Snacks
+        </div>
         {{ if .Snacks }}
             <div class="font-medium text-xl">
                 {{ .Snacks }}
@@ -120,7 +140,7 @@
         {{ else }}
             {{ template "nothing-planned" }}
         {{ end }}
-        <div>
+        <div class="flex mt-3.5 sm:mt-0 space-x-2">
             <button
                     hx-get="/meals/{{ .Date.Format "2006-01-02" }}"
                     hx-target="#meals-{{ .Date.Format "2006-01-02" }}"
