--- a/views/nutrition.gohtml
+++ b/views/nutrition.gohtml
@@ -12,48 +12,58 @@
     {{ end }}
 </head>
 <body class="bg-slate-50">
-<h1 class="font-semibold text-4xl text-center my-8">Nutrition</h1>
-{{ template "total-daily-energy-expenditure" .TotalDailyEnergyExpenditure }}
-{{ template "nutrition-list" .NutritionEntries }}
+<main class="w-[450px] mx-auto">
+    <h1 class="font-semibold text-4xl text-center my-8">Nutrition</h1>
+    {{ template "total-daily-energy-expenditure" .TotalDailyEnergyExpenditure }}
+    {{ template "nutrition-list" .NutritionEntries }}
+</main>
 </body>
 </html>
 
 {{ define "total-daily-energy-expenditure" }}
-    <section id="total-daily-energy-expenditure" class="max-w-[600px] mx-auto bg-white p-5 mb-4 rounded-xl shadow-md">
+    <section id="total-daily-energy-expenditure" class="mx-auto bg-white p-5 mb-4 rounded-xl shadow-md">
         <h2 class="font-medium text-xl text-slate-700">
             Details
         </h2>
-        <div class="grid grid-cols-4 gap-2 mt-1.5">
+        <div class="grid grid-cols-[auto_1fr] gap-x-4 gap-y-2 items-center mt-2.5">
             <div class="font-light">
-                Period
+                Maintenance Calories
             </div>
-            <div class="col-span-3">
-                {{ .Start.Format "02.01.2006" }} - {{ .End.Format "02.01.2006" }}
+            <div>
+                {{ .TotalDailyEnergyExpenditure }} kCal
             </div>
             <div class="font-light">
                 Average Calories
             </div>
             <div>
                 {{ .AverageCalories }} kCal
+                {{ if lt .AverageCalories .TotalDailyEnergyExpenditure }}
+                    &darr;
+                {{ else if gt .AverageCalories .TotalDailyEnergyExpenditure }}
+                    &uarr;
+                {{ else }}
+                    &rarr;
+                {{ end }}
             </div>
             <div class="font-light">
                 Weight Difference
             </div>
             <div>
-                {{ .PeriodWeightDifference }} kg
-            </div>
-            <div class="font-light col-span-2">
-                Total Daily Energy Expenditure
-            </div>
-            <div>
-                {{ .TotalDailyEnergyExpenditure }} kCal
+                {{ printf "%.2f kg" .PeriodWeightDifference }}
+                {{ if lt .PeriodWeightDifference 0.0 }}
+                    &darr;
+                {{ else if gt .PeriodWeightDifference 0.0 }}
+                    &uarr;
+                {{ else }}
+                    &rarr;
+                {{ end }}
             </div>
         </div>
     </section>
 {{ end }}
 
 {{ define "nutrition-list" }}
-    <section class="max-w-[400px] mx-auto">
+    <section class="mx-auto">
         <ul class="flex flex-col space-y-4">
             {{ range . }}
                 <li>
