Build data visualization

--- a/views/nutrition.gohtml
+++ b/views/nutrition.gohtml
@@ -14,6 +14,7 @@
 <body class="bg-slate-50">
 <main class="w-[450px] mx-auto">
     <h1 class="font-semibold text-4xl text-center my-8">Nutrition</h1>
+    <div id="nutrition-diagram"></div>
     {{ template "total-daily-energy-expenditure" .TotalDailyEnergyExpenditure }}
     {{ template "nutrition-list" .NutritionEntries }}
 </main>
