--- a/views/nutrition.gohtml
+++ b/views/nutrition.gohtml
@@ -14,7 +14,18 @@
 <body class="bg-slate-50">
 <main class="w-[450px] mx-auto">
     <h1 class="font-semibold text-4xl text-center my-8">Nutrition</h1>
-    <div id="nutrition-diagram"></div>
+    <section id="nutrition-diagram-section" class="bg-white p-5 mb-4 rounded-xl shadow-md">
+        <h2 class="font-medium text-xl text-slate-700 mb-2.5">
+            Trend
+        </h2>
+        <canvas
+                id="nutrition-diagram"
+                width="400"
+                height="300"
+                aria-label="Nutrition Diagram"
+                role="img"
+        ></canvas>
+    </section>
     {{ template "total-daily-energy-expenditure" .TotalDailyEnergyExpenditure }}
     {{ template "nutrition-list" .NutritionEntries }}
 </main>
@@ -22,7 +33,7 @@
 </html>
 
 {{ define "total-daily-energy-expenditure" }}
-    <section id="total-daily-energy-expenditure" class="mx-auto bg-white p-5 mb-4 rounded-xl shadow-md">
+    <section id="total-daily-energy-expenditure" class="bg-white p-5 mb-4 rounded-xl shadow-md">
         <h2 class="font-medium text-xl text-slate-700">
             Details
         </h2>
