--- a/views/nutrition.gohtml
+++ b/views/nutrition.gohtml
@@ -14,7 +14,7 @@
 <body class="bg-slate-50">
 <main class="w-[450px] mx-auto">
     <h1 class="font-semibold text-4xl text-center my-8">Nutrition</h1>
-    <section id="nutrition-diagram-section" class="bg-white p-5 mb-4 rounded-xl shadow-md">
+    <section data-nutrition="{{ .NutritionJSON }}" id="nutrition-diagram-section" class="bg-white p-5 mb-4 rounded-xl shadow-md">
         <h2 class="font-medium text-xl text-slate-700 mb-2.5">
             Trend
         </h2>
